[package]
name = "rustnq"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2",features = ["json","chrono"]}
sqlx-mysql = {version = "0.8.2", features = ["json","chrono"]}
anyhow = "1.0.89"
serde = "1.0.210"
chrono = { version = "^0", features = ["serde"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
url = "2.5.2"
tokio = "1.41.0"

