[package]
name = "rustnq"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2",features = ["json","chrono","rust_decimal"]}
sqlx-mysql = {version = "0.8.2", features = ["json","chrono","rust_decimal"]}
anyhow = "1.0.89"
serde = "1.0.210"
chrono = { version = "^0", features = ["serde"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
url = "2.5.2"
tokio = { version = "1.41.0", features = ["sync"] }
uuid = { version = "1.11.0", features = ["v4"] }
rust_decimal = "1.36.0"

